--- a/main.html
+++ b/main.html
@@ -11,11 +11,14 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <table>
-      <tr>
+      <thead>
+		  <tr>
         <th>Iteam</th>
         <th>Price</th>
         <th>Quantity</th>
       </tr>
+	  </thead>
+	<tbody>
       <tr>
         <th>Banana</th>
         <td>₹1.00</td>
@@ -36,6 +39,7 @@
         <td>$12.10</td>
         <td>8</td>
       </tr>
+	</tbody>
     </table>
 </body>
 
