--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <table>
       <thead>
 		  <tr>
-        <th>Iteam</th>
+        <th>Item</th>
         <th>Price</th>
         <th>Quantity</th>
       </tr>
